social and link sections added

--- a/index.html
+++ b/index.html
@@ -7,7 +7,42 @@
 </head>
 <body>
 
-  <h1>My link in bio</h1>
+  <div class="banner">
+    <img src="/public/IMG_0010.JPG" alt="Sal's Profile Pic">
+  </div>
+
+  <div class="name">
+    Salvador Castaneda
+  </div>
+
+  <div class="social-icons">
+    <a href="#" target="_blank">
+      Github
+    </a>
+
+    <a href="#" target="_blank">
+      LinkedIn
+    </a>
+
+    <a href="#" target="_blank">
+      Twitter
+    </a>
+  </div>
+
+  <div class="link">
+    <img src="#" alt="#">
+    <a href="https://codepen.io/" target="_blank">CodePen</a>
+  </div>
+
+  <div class="link">
+    <img src="#" alt="#">
+    <a href="https://glitch.com/" target="_blank">Glitch</a>
+  </div>
+
+  <div class="link">
+    <img src="#" alt="#">
+    <a href="https://github.com/features/codespaces" target="_blank">Codespaces</a>
+  </div>
   
 </body>
 </html>
