updated scrimba logo

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
   </div>
 
   <div class="link">
-    <img src="/public/scrimba.svg" alt="Scrimba Logo" class="thumbnail">
+    <img src="/public/scrimba.png" alt="Scrimba Logo" class="thumbnail">
     <a href="https://scrimba.com/" target="_blank">Scrimba</a>
   </div>
 
