--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       width: 128px;
       height: 128px;
       object-fit: cover;
+      object-position: center bottom;
       border-radius: 128px;
     }
 
